# Code

./: README.md
C/: CMakeLists.txt  trab.c
C/AP2/: 1_15.05.c  1_AtividadeG1_1ponto.c  2_22.05.c  2_matriz.c  3_15.05.c  3_22.05.c  Semipresencial 15.06.c  Trabalho G2.c  pointers.c
C/Algoritimos e programação 2/: 1_22;05.c  1_matriz.c  2_AtividadeG1_1ponto.c  4_29.05.c  5_29.05.c  prova6.c
C/Aula 10 2018-2/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
C/Aula 10 2018-2/Intro/: Aula Loops.c  Aula Loops.cpp  desafio08-11.c
C/Aula 11 2018-2/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
C/Estrutura de dados/: 1_18.08.c  Activity05_1.c  Activity05_2.c  Activity06_1.c  Activity08.c  Activity09.c  Activity10.c  TrabalhoG1.c  portugol.txt
C/EstruturaDeDados/: 1_12.08.c  2_12.08.c  TrabalhoG2.c
C/Paradigmas/: 4_3a.c  4_3b.c
C/Trabalho G2/: trab.c  trab2.c
Front_End/: HTML Template.html  adivinha_mais.html  canvas js.html  canvas.html
Front_End/HTML5 e CSS3 parte 1,2,3 e 4 - Alura/: index.html  style.css
Front_End/Introducao-javascript/: index.html
Front_End/Teste CV/: index.html  style.css
HTML5 e CSS3 parte 1,2,3 e 4 - Alura/: contato.html  produtos.html  style-home.css
HTML_CSS_JavaScript/: Aula Alura.html  GasolinaExercicio.html  HTML Template.html  Test.html  futebol.html  imc.html
Introducao-javascript - Alura/: README.txt  index.html
Java/: FirstProgram.java  PesoNaLua.java  Raio.java
PHP/Studies Project/: Hey.php  (+1 more)
SQL/: alunos-matriculados.sql  cidade-onde-estuda-mas-nao-mora.sql  coluna-data-entrada.sql  questao-sobre-int-ref.sql
(+87 files in other folders)
